--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -33,6 +33,16 @@
     }
 }
 
+.btn-danger{
+    background-color: #e8303d;
+
+    transition: background-color .3s ease;
+
+    &:hover{
+        background-color: darken($color: #e8303d, $amount: 10);
+    }
+}
+
 .btn-block{
     width: 100%;
 }
