--- a/src/styles/components/_journal.scss
+++ b/src/styles/components/_journal.scss
@@ -86,6 +86,14 @@
     font-size: 10px;
 }
 
+.journal__entry-title, .journal__entry-content{
+    text-overflow: ellipsis;
+    width: 210px; 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .journal__entry-date-box{
     align-items: center;
     display: flex;
